# GBA_Emulator

./: CMakeLists.txt  README.md
include/: instruction.hpp
include/Headers/: bitw.hpp  bus.hpp  cpu.hpp  gb_program.hpp  ram.hpp
src/: Gameboy  bitw.cpp  bus.cpp  cpu.cpp  gb_program.cpp  instruction.cpp  main.cpp  ram.cpp
